cmake_minimum_required(VERSION 3.28)
project(1)

set(CMAKE_CXX_STANDARD 17)

add_executable(1 main.cpp
        Book.cpp
        Book.h
        LinkedList.cpp
        LinkedList.h
        Experiment1.cpp
        Experiment1.h
        Experiment2.cpp
        Experiment2.h
        Experiment3.cpp
        Experiment3.h
        Experiment4.cpp
        Experiment4.h
        Experiment5.cpp
        Experiment5.h
        Experiment6.cpp
        Experiment6.h
        Book.cpp)
